--- a/source/_layouts/default.html
+++ b/source/_layouts/default.html
@@ -3,7 +3,7 @@
 
 <body>
 	<div class="container">
-		<div class="left-col">
+		<div class="left-col" style="background-image: url('../images/gukong_bg.png');background-size: cover">
 			<div class="intrude-less">
 			<header id="header" class="inner">{% include header.html %}</header>				
 			</div>
