--- a/sass/_greyshade.scss
+++ b/sass/_greyshade.scss
@@ -203,6 +203,8 @@ body {
 		color: $color-gray05;
 		height: 100%;
 		font-size: 1.3em;
+		background-image: url("../images/gukong_bg.png");
+		background-size: cover;
 		-webkit-transition: all .2s ease-in;
 		-moz-transition: all .2s ease-in;
 		-o-transition: all .2s ease-in;
