--- a/sass/_greyshade.scss
+++ b/sass/_greyshade.scss
@@ -93,13 +93,14 @@ body {
 		  width: auto;
 		}
 		.mid-col-container {
+			background-color:#e7f5fb;
 			padding: 0px 70px 0px 70px;
 			max-width: 90%;
 			#content {
 				width: 100%;
 				article {
 					border-top: none;
-					padding: 80px 0px;
+					padding: 40px 0px;
 					.title {
 						margin-left: 0px;
 						font-size: 3em;
@@ -127,9 +128,6 @@ body {
 						}
 						.gist .gist-file .gist-data {
 							.line_numbers {
-								line-height: inherit;
-							}
-							pre {
 								line-height: inherit;
 							}
 						}
@@ -280,6 +278,10 @@ a {
 
 a:hover {
 	color: $greyshade;
+}
+
+pre {
+	font-size:12px;
 }
 
 body {
