--- a/sass/_greyshade.scss
+++ b/sass/_greyshade.scss
@@ -100,7 +100,8 @@ body {
 				width: 100%;
 				article {
 					border-top: none;
-					padding: 40px 0px;
+					padding: 40px 30px;
+					background-color: #f7f7f7;
 					.title {
 						margin-left: 0px;
 						font-size: 3em;
