--- a/sass/parts/_archive.scss
+++ b/sass/parts/_archive.scss
@@ -11,7 +11,7 @@
 	}
 	.year{
 		line-height: 35px;
-		width: 200px;
+		width: 100px;
 		position: absolute;
 		top: 0;
 		padding-top: 15px;
@@ -29,7 +29,10 @@
 		}
 	}
 	article{
-		margin-left: 200px;
+		border-bottom: 1px solid $color-gray04;
+		box-shadow: none; 
+		border-radius: 0px;
+		margin-left: 100px;
 		padding: 15px 0;
 		@media screen and (max-width: 600px){
 			margin-left: 0;
