--- a/source/_includes/asides/category_list.html
+++ b/source/_includes/asides/category_list.html
@@ -1,5 +1,5 @@
 <section style="text-align: center">
-    <h1>Categories</h1>
+    <h1 style="color: black" >文章分类</h1>
     <ul id="categories">
         {% category_list %}
     </ul>
