--- a/sass/_greyshade.scss
+++ b/sass/_greyshade.scss
@@ -93,14 +93,12 @@ body {
 		  width: auto;
 		}
 		.mid-col-container {
-			background-color:#e7f5fb;
+			background-color:white;
 			padding: 0px 70px 0px 70px;
 			max-width: 90%;
 			#content {
 				width: 100%;
 				article {
-					box-shadow:0 0 20px rgba(0,0,0,0.2);
-					border-radius:5px;
 					border-top: none;
 					padding: 40px 30px;
 					background-color: #f7f7f7;
@@ -238,8 +236,7 @@ body {
 				}
 			}
 			a {
-				color: #EFEFEF;
-				text-shadow: 0 1px #333;
+				color: #000000;
 			}
 			a:hover {
 				color: $greyshade;
@@ -267,7 +264,7 @@ body {
 	article {
 		.meta {
 			line-height: 1.5em;
-			margin-top: 0;
+			margin-top: 0px;
 			span::before {
 				padding-right: 0;
 			}
