--- a/sass/parts/_article.scss
+++ b/sass/parts/_article.scss
@@ -1,6 +1,6 @@
 article{
-	border-bottom: 1px solid $color-gray04;
-	border-top: 1px solid $color-gray05;
+	box-shadow:0 0 20px rgba(0,0,0,0.2);
+	border-radius:5px;
 	padding: 30px 0;
 	position: relative;
 	@media screen and (max-width: 800px){
